--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/file-orc-extract-progressing.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/file-orc-extract-progressing.component.html
@@ -1,4 +1,13 @@
-<ng-container *ngIf="file">
+<ng-container *ngIf="(loadingFirstTime$ | async); else loadingDone">
+  <div class="h-full w-full flex items-center text-center align-middle">
+    <mat-progress-spinner
+      class="mx-auto my-auto"
+      color="primary"
+      mode="indeterminate">
+    </mat-progress-spinner>
+  </div>
+</ng-container>
+<ng-template #loadingDone>
   <div class="flex justify-between rounded-lg rounded-b-none border-solid border border-gray-300 h-[56px] z-10">
     <div
       class="justify-end items-center px-2 py-2 sm:px-8 sm:flex sm:flex-row-reverse p-4">
@@ -92,18 +101,21 @@
           Hiển thị ảnh
         </label>
       </div>
-      <div (click)="showOcrText()" *ngIf="!isShowOcrtext" class="flex items-center inline-block ml-2.5">
-        <input class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500" type="checkbox">
-        <label class="ml-3 min-w-0 flex-1 text-gray-500">
-          Hiển thị kết quả nhận dạng
-        </label>
-      </div>
-      <div (click)="showMetadata()" *ngIf="!isShowMetadata" class="flex items-center inline-block ml-2.5">
-        <input class="h-4 w-4 border-gray-300 rounded text-teal-600 focus:ring-teal-500" type="checkbox">
-        <label class="ml-3 min-w-0 flex-1 text-gray-500">
-          Hiển thị kết quả Metadata
-        </label>
-      </div>
+      <ng-container *ngIf="file.state === -1">
+        <div (click)="showOcrText()" *ngIf="!isShowOcrtext" class="flex items-center inline-block ml-2.5">
+          <input class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500" type="checkbox">
+          <label class="ml-3 min-w-0 flex-1 text-gray-500">
+            Hiển thị kết quả nhận dạng
+          </label>
+        </div>
+        <div (click)="showMetadata()" *ngIf="!isShowMetadata" class="flex items-center inline-block ml-2.5">
+          <input class="h-4 w-4 border-gray-300 rounded text-teal-600 focus:ring-teal-500" type="checkbox">
+          <label class="ml-3 min-w-0 flex-1 text-gray-500">
+            Hiển thị kết quả Metadata
+          </label>
+        </div>
+      </ng-container>
+
     </div>
 
     <div class="flex justify-end px-2 py-2">
@@ -144,16 +156,19 @@
     <div *ngIf="file.state == 1" class="px-4 py-3 sm:px-8 p-4 h-[60px]">
       <ocr-progressing [fileId]="file.id"></ocr-progressing>
     </div>
-    <div *ngIf="file.page_count > 1" class="border-solid border-b border-gray-300 h-[60px]">
+    <div *ngIf="file.page_count > 1" class="border-b border-solid border-gray-300">
       <ocr-file-page (currentPage)="getCurrentPage($event)" [file]="file"></ocr-file-page>
     </div>
-    <ng-container *ngIf="numberCol">
+    <ng-container>
       <div
         [ngClass]="[file.state === 1 ? 'h-[calc(100%-60px)]' : 'h-full',
         file.page_count > 1 && file.state == 1 ? 'h-[calc(100%-120px)]' : '',
-        file.page_count > 1 && file.state != 1 ? 'h-[calc(100%-60px)]' : '']"
-        class="ml-1.5 w-[calc(100%-0.5rem)] grid grid-cols-{{numberCol}} gap-2 box-border relative">
-        <div #imgBox *ngIf="isShowImg" class="mx-auto my-auto relative">
+        file.page_count > 1 && file.state != 1 ? 'h-[calc(100%-60px)]' : '',
+        numberCol === 1 ? 'grid-cols-1' : '',
+        numberCol === 2 ? 'grid-cols-2' : '',
+        numberCol === 3 ? 'grid-cols-3' : '']"
+        class="ml-1.5 w-[calc(100%-0.5rem)] grid  gap-2 box-border relative">
+        <div #imgBox *ngIf="isShowImg" class="mx-auto my-auto relative rounded-lg">
           <div (click)="downloadFile()" class="cursor-pointer absolute right-8 top-1">
             <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -168,11 +183,15 @@
                 d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
             </svg>
           </div>
-          <div *ngIf="!isImageLoading; else notFoundImage">
-            <img [alt]="file.name" [src]="imageToShow" class="h-auto w-full"/>
+          <div *ngIf="!(isImageLoading.asObservable() | async); else notFoundImage">
+            <img [alt]="file.name" [src]="imageToShow" class="h-auto w-full rounded-lg"/>
           </div>
           <ng-template #notFoundImage>
-            <img [alt]="file.name">
+            <mat-progress-spinner
+              color="primary"
+              mode="indeterminate">
+            </mat-progress-spinner>
+            <img [alt]="file.name" class="rounded-lg">
           </ng-template>
         </div>
         <!--        <div #dragHover (cdkDragMoved)="dragMove(dragHover, $event)" cdkDrag cdkDragLockAxis="x"-->
@@ -193,19 +212,22 @@
             </svg>
           </div>
           <textarea [(ngModel)]="ocrtext"
-                    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full h-full sm:text-sm border border-gray-300 resize-none border"
+                    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full h-full sm:text-sm border border-gray-300 resize-none border rounded-lg"
                     name="textarea"></textarea>
         </div>
-        <div *ngIf="isShowMetadata" class=" mx-auto my-auto  w-full h-full relative bg-white">
-          <div (click)="closeMetadta()" class="cursor-pointer absolute right-3 top-1">
+        <div *ngIf="isShowMetadata" class=" w-full h-full relative">
+          <div (click)="closeMetadta()" class="cursor-pointer absolute right-3 top-1 z-10">
             <svg height="24" viewBox="0 0 24 24" width="24"
                  xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
             </svg>
           </div>
+          <div class="p-1 w-full h-full relative">
+            <ocr-table-metadata [ocrFileModel]="ocr" class="w-full h-full "></ocr-table-metadata>
+          </div>
         </div>
       </div>
     </ng-container>
   </div>
-</ng-container>
+</ng-template>
