--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
@@ -152,6 +152,7 @@
               <th class="px-4 py-3 align-middle min-w-[200px]">TRẠNG THÁI</th>
               <th class="px-4 py-3 align-middle min-w-[150px]">NGƯỜI TẠO</th>
               <th class="px-4 py-3 align-middle min-w-[100px]">NGÀY TẠO</th>
+              <th class="px-4 py-3 align-middle min-w-[150px]">Trích yếu</th>
               <th class="px-4 py-3 align-middle min-w-[150px]">LOẠI VĂN BẢN</th>
               <th class="px-4 py-3 align-middle min-w-[100px]">CƠ QUAN BAN HÀNH</th>
               <th class="px-4 py-3 align-middle min-w-[100px]">NGÀY BAN HÀNH</th>
