--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-progressing/ocr-progressing.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-progressing/ocr-progressing.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="(ocrFileProgress$ | async) as item ">
   <ng-container>
-    <div class="flex flex-1 justify-between">
+    <div class="flex flex-1 justify-between bg-white">
       <ng-container>
         <div>
       <span
@@ -11,7 +11,6 @@
         </div>
       </ng-container
       >
-
       <div>
     <span class="text-sm text-gray-400 mr-3">
       <span class="mr-3"> {{ item.ocr.percent }}% </span>
