--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/progress-file-list/progress-file-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/progress-file-list/progress-file-list.component.html
@@ -28,9 +28,16 @@
                     d="M6 22h12a2 2 0 0 0 2-2V8l-6-6H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2zm7-18 5 5h-5V4zm-4.5 7a1.5 1.5 0 1 1-.001 3.001A1.5 1.5 0 0 1 8.5 11zm.5 5 1.597 1.363L13 13l4 6H7l2-3z"></path></svg>
                 </ng-template>
               </span>
-              <span class="cursor-pointer ">
+          <ng-container *ngIf="(service.activeFile$ | async)?.id === file.id; else fileNotActive">
+            <span class="cursor-pointer font-semibold">
                 {{ file.name }}
-              </span>
+            </span>
+          </ng-container>
+          <ng-template #fileNotActive>
+            <span class="cursor-pointer">
+                {{ file.name }}
+            </span>
+          </ng-template>
           </span>
       </div>
     </ng-container>
